<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Driver.MainDriverActivity">


    <androidx.viewpager.widget.ViewPager
        android:layout_above="@+id/bottom_navigation_view_linear2"
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:layout_alignParentBottom="true"
        android:padding="7dp"
        android:id="@+id/bottom_navigation_view_linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bag_right"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_marginRight="5dp"
            android:id="@+id/l_item_home2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/home" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_marginRight="5dp"
            android:id="@+id/l_item_search2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_badgeBackgroundColor="@color/green_active"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_search"
            app:bt_shape="@drawable/transition_background_drawable_search"
            app:bt_title="@string/search" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_marginRight="5dp"
            android:id="@+id/l_item_profile_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/blue_grey_active"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_notifications_black_24dp"
            app:bt_shape="@drawable/transition_background_drawable_like"
            app:bt_title="@string/notification" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_profile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_person"
            app:bt_shape="@drawable/transition_background_drawable_person"
            app:bt_title="@string/profile" />

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>


</RelativeLayout>